# MCXE247Sandbox

./: CMakeLists.txt  New_Interrupt.code-workspace
.cache/clangd/index/: app.h.8433AFD67747AD2C.idx  board.c.BC4A4C2499B1BE13.idx  board.h.4B4F109923809721.idx  clock_config.c.96D1D73BDAE4D4DF.idx  clock_config.h.9F4F52180D3CBF2E.idx  fsl_memcpy.S.B7B6EECBE831E59A.idx  gpio_input_interrupt.c.FB6093AC3096049F.idx  hardware_init.c.328822F0C66E9DF4.idx  min_runtime.c.FEDF82A23ADFB656.idx  pin_mux.c.5232A3B799930B35.idx  pin_mux.h.2150E53BF76A937E.idx
build_cmake_check/: CMakeCache.txt
build_cmake_check2/: CMakeCache.txt  Makefile  cmake_install.cmake
build_template_check/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
inc/: app.h  board.h  clock_config.h  pin_mux.h
src/: board.c  clock_config.c  gpio_input_interrupt.c  hardware_init.c  min_runtime.c  pin_mux.c
